Added mail send with pepipost

--- a/ansible/final_list.yaml.j2
+++ b/ansible/final_list.yaml.j2
@@ -5,3 +5,4 @@ qr_list:
     number_of_posters: "{{ user.number_of_posters }}"
     qr_codes: {{ user.qr_codes }}
 {% endfor%}
+phrases: {{ phrases }}
