--- a/ansible/roles/qr_generator/templates/poster.adoc.j2
+++ b/ansible/roles/qr_generator/templates/poster.adoc.j2
@@ -12,8 +12,7 @@
 :pdf-stylesdir: ./common-resources/themes/
 :figure-caption!:
 :noheader:
-:page_numbering_start_at: 2
-:numbering-start-at: 2
+:nofooter:
 
 {% for code in item.qr_codes %}
 
