fixed dir in poster template generation

--- a/ansible/roles/qr_generator/templates/poster.adoc.j2
+++ b/ansible/roles/qr_generator/templates/poster.adoc.j2
@@ -19,7 +19,7 @@
 [.text-center]
 {{ phrases[code].first }}
 
-image::../../../media/qr_images/{{ item.grafana_code }}-{{ code }}.png[align=center]
+image::../../../media/qr_images/{{ item.grafana_code }}/{{ item.grafana_code }}-{{ code }}.png[align=center]
 
 [.text-center]
 {{ phrases[code].second }}
