added personalized url

--- a/ansible/roles/grafana_provisioner/templates/qr_counter.sh.j2
+++ b/ansible/roles/grafana_provisioner/templates/qr_counter.sh.j2
@@ -10,3 +10,6 @@ COUNT=$(cat /var/log/nginx/ice_access.log|grep '"GET /{{ item.grafana_code }}-{{
 echo contador.{{ item.grafana_code }}.{{ panel }} $COUNT  `date +%s` | netcat ${SERVER} ${PORT} -w0
 
 {% endfor %}
+
+COUNT=$(cat /var/log/nginx/ice_access.log|grep '"GET /{{ item.grafana_code }}-ice'|egrep -v 'sempi.tech|applebot|Twitterbot|externalhit_uatext.php|datagnionbot|Semanticbot|Mediatoolkitbot' | awk '{print $1}' | uniq| wc -l)
+echo contador.{{ item.grafana_code }}.ice $COUNT  `date +%s` | netcat ${SERVER} ${PORT} -w0
