--- a/ansible/roles/qr_generator/templates/poster.adoc.j2
+++ b/ansible/roles/qr_generator/templates/poster.adoc.j2
@@ -19,7 +19,7 @@
 {{ phrases[code].first }}
 
 .{{item.grafana_code}}-{{ code }}
-image::../../../media/qr_images/{{ item.grafana_code }}/{{ item.grafana_code }}-{{ code }}.png[pdfwidth=30%,align=center]
+image::../../../media/qr_images/{{ item.grafana_code }}/{{ item.grafana_code }}-{{ code }}.svg[pdfwidth=30%,align=center]
 
 [.text-center]
 {{ phrases[code].second }}
