added grafana panels for organizations

--- a/ansible/roles/grafana_provisioner/templates/main.sh.j2
+++ b/ansible/roles/grafana_provisioner/templates/main.sh.j2
@@ -3,3 +3,6 @@
 {% for item in qr_list %}
 /root/eci-grafana/eci-monitoring/graphite/eci/qr_counters/{{ item.grafana_code }}.sh
 {% endfor %}
+{% for item in org_list %}
+/root/eci-grafana/eci-monitoring/graphite/eci/qr_counters/{{ item.grafana_code }}.sh
+{% endfor %}
