--- a/ansible/roles/grafana_provisioner/templates/qr_main.sh.j2
+++ b/ansible/roles/grafana_provisioner/templates/qr_main.sh.j2
@@ -2,4 +2,5 @@
 
 {% for item in qr_list %}
 /root/eci-grafana/eci-monitoring/graphite/eci/qr_counters/{{ item.grafana_code }}.sh
+sleep 30
 {% endfor %}
